--- a/project-1.html
+++ b/project-1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About Mausam Dekho</title>
-    <meta name="description" content="Case study page of Project" />
+    <meta name="description" content="Details of Project" />
     <link rel="icon" type="png" href="avatar-1.png">
     <link rel="stylesheet" href="style.css" />
 
