Organized files into images, css, and js folders

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Discover Tanishak</title>
-    <link rel="icon" type="png" href="avatar-1.png">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="png" href="avatar-1.png" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +21,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="avatar-1.png"
+              src="./images/avatar-1.png"
               alt="Tanishak Shukla"
               class="header__logo-img"
             />
@@ -47,12 +47,12 @@
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
-              src="ham-menu.svg"
+              src="./images/ham-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
             />
             <img
-              src="ham-menu-close.svg"
+              src="./images/ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
             />
@@ -86,8 +86,16 @@
         <h1 class="heading-primary">Hey, My name is Tanishak Shukla</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            A MCA student at Amity University, Noida, with a strong passion for technology and software development. My studies have equipped me with a solid foundation in programming and software engineering. I enjoy working on projects that challenge my creativity and problem-solving skills, particularly in web development, data structures and algorithms, and data science. Actively involved in tech communities, I love participating in coding competitions to continuously hone my skills.
-            <br>Welcome to my portfolio, and feel free to reach out for collaborations or professional opportunities.
+            A MCA student at Amity University, Noida, with a strong passion for
+            technology and software development. My studies have equipped me
+            with a solid foundation in programming and software engineering. I
+            enjoy working on projects that challenge my creativity and
+            problem-solving skills, particularly in web development, data
+            structures and algorithms, and data science. Actively involved in
+            tech communities, I love participating in coding competitions to
+            continuously hone my skills.
+            <br />Welcome to my portfolio, and feel free to reach out for
+            collaborations or professional opportunities.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -96,27 +104,36 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/tanishak-shukla-692238204/" class="home-hero__social-icon-link">
+          <a
+            href="https://www.linkedin.com/in/tanishak-shukla-692238204/"
+            class="home-hero__social-icon-link"
+          >
             <img
-              src="linkedin-ico.png"
+              src="./images/linkedin-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="https://github.com/TANISHAK06" class="home-hero__social-icon-link">
+          <a
+            href="https://github.com/TANISHAK06"
+            class="home-hero__social-icon-link"
+          >
             <img
-              src="github-ico.png"
+              src="./images/github-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="https://leetcode.com/u/tanishakshukla08/" class="home-hero__social-icon-link">
+          <a
+            href="https://leetcode.com/u/tanishakshukla08/"
+            class="home-hero__social-icon-link"
+          >
             <img
-              src="leet-code.png"
+              src="./images/leet-code.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -128,7 +145,7 @@
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
-              src="insta-ico.png"
+              src="./images/insta-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -144,7 +161,9 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Hello! I am Tanishak Shukla, a passionate and dedicated Master of Computer Applications (MCA) student currently pursuing my degree at Amity University, Noida. 
+            Hello! I am Tanishak Shukla, a passionate and dedicated Master of
+            Computer Applications (MCA) student currently pursuing my degree at
+            Amity University, Noida.
           </span>
         </h2>
         <div class="about__content">
@@ -154,18 +173,26 @@
               <p class="about__content-details-para">
                 Hey! It's
                 <strong>Tanishak Shukla</strong>
-                My primary focus is on 
-                <strong>web development, data structures and algorithms (DSA), routing and switching essentials, and databases</strong>
-                 I thrive on creating efficient, scalable, and innovative solutions to complex problems.
-                 In addition to my technical pursuits, I have a creative side that I express through <strong >poetry</strong>
-                 Writing allows me to explore and articulate my thoughts in a unique and impactful way.
-                 
+                My primary focus is on
+                <strong
+                  >web development, data structures and algorithms (DSA),
+                  routing and switching essentials, and databases</strong
+                >
+                I thrive on creating efficient, scalable, and innovative
+                solutions to complex problems. In addition to my technical
+                pursuits, I have a creative side that I express through
+                <strong>poetry</strong>
+                Writing allows me to explore and articulate my thoughts in a
+                unique and impactful way.
               </p>
               <p class="about__content-details-para">
-                When I’m not coding or crafting verses, you can find me immersed in the world of gaming,
-                which fuels my competitive spirit and sharpens my strategic thinking.
-                This combination of technical expertise and creative passion drives me to continually learn and grow.
-                Feel free to explore my projects and get in touch if you'd like to collaborate or discuss anything tech-related!. Feel free to
+                When I’m not coding or crafting verses, you can find me immersed
+                in the world of gaming, which fuels my competitive spirit and
+                sharpens my strategic thinking. This combination of technical
+                expertise and creative passion drives me to continually learn
+                and grow. Feel free to explore my projects and get in touch if
+                you'd like to collaborate or discuss anything tech-related!.
+                Feel free to
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -195,7 +222,8 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Welcome to my projects section! Here, you'll find a collection of my work that showcases my expertise 
+            Welcome to my projects section! Here, you'll find a collection of my
+            work that showcases my expertise
           </span>
         </h2>
 
@@ -203,7 +231,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="project-mockup-example.jpeg"
+                src="./images/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -212,10 +240,11 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Mausam Dekho</h3>
               <p class="projects__row-content-desc">
-                Mausam Dekho is designed to provide accurate and up-to-date weather information in a fun and user-friendly way.
+                Mausam Dekho is designed to provide accurate and up-to-date
+                weather information in a fun and user-friendly way.
               </p>
               <a
-                href="project-1.html"
+                href="./projects-pages/project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Details</a
@@ -225,21 +254,23 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="project-mockup-example.jpeg"
+                src="./images/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title"> Calculator </h3>
+              <h3 class="projects__row-content-title">Calculator</h3>
               <p class="projects__row-content-desc">
-                This project is a fully responsive calculator designed to provide a seamless user experience across various devices,
-                including mobile phones, tablets, and desktop monitors. The calculator features a dark/light mode toggle, enabling 
-                users to switch between themes for better visibility and comfort
+                This project is a fully responsive calculator designed to
+                provide a seamless user experience across various devices,
+                including mobile phones, tablets, and desktop monitors. The
+                calculator features a dark/light mode toggle, enabling users to
+                switch between themes for better visibility and comfort
               </p>
               <a
-                href="project-2.html"
+                href="./projects-pages/project-2.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Details</a
@@ -254,7 +285,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            If you're having trouble reaching me through the provided social links, please fill out this form to request a callback.
+            If you're having trouble reaching me through the provided social
+            links, please fill out this form to request a callback.
           </span>
         </h2>
         <div class="contact__form-container">
@@ -308,31 +340,47 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/tanishak-shukla-692238204/">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/tanishak-shukla-692238204/"
+              >
                 <img
                   class="main-footer__icon"
-                  src="linkedin-ico.png"
+                  src="./images/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/TANISHAK06">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://github.com/TANISHAK06"
+              >
                 <img
                   class="main-footer__icon"
-                  src="github-ico.png"
+                  src="./images/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://leetcode.com/u/tanishakshukla08/">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://leetcode.com/u/tanishakshukla08/"
+              >
                 <img
                   class="main-footer__icon"
-                  src="leet-code.png"
+                  src="./images/leet-code.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/shutuptanishqq/?next=%2F">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.instagram.com/shutuptanishqq/?next=%2F"
+              >
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
-                  src="insta-ico.png"
+                  src="./images/insta-ico.png"
                   alt="icon"
                 />
               </a>
@@ -341,11 +389,10 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Tanishak Shukla</h4>
             <p class="main-footer__short-desc">
-                Feel free to contact me here anytime!!!
+              Feel free to contact me here anytime!!!
             </p>
           </div>
         </div>
-
       </div>
     </footer>
 
